<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="app_movies">Popular Movies</string>
    <string name="app_stock">Stock Hawk</string>
    <string name="app_build_big">Build it bigger</string>
    <string name="app_material">Make your app material</string>
    <string name="app_go_ubi">Go Ubiquitous</string>
    <string name="app_capstone">Capstone</string>
    <string name="app_label_title">My Nanodegree Apps!</string>
    <string name="app_name_format">This button will launch my %s app!</string>
</resources>
